# experts_dw

./: .gitignore  PersonEmplXRef-201701.csv  Pipfile  README.md  Stafforganisationrelations-201701.csv  alembic.ini  allison_example_report_2022-12-12.sql  allison_report.sql  colin-mcfadden-dw-dept-name-changes.md  common.py  db.py  delete_internal_orgs_lacking_pure_uuids.py  env.dist  experts.mwb  get_all_persons.py  get_person.py  grad_prog_orgs_one_off.py  load_mndrive_internal_orgs.py  load_pure_json_collection_meta.py  load_scopus_json_collection_meta.py  models.py  person_org_map_errors.txt  populate_assoc_tables.py  populate_internal_orgs_with_pure_data.py  populate_mds_person_scival_id.py  populate_other_person_tables.py  populate_person.py  populate_person_emplid.py  populate_person_scival_id.py  populate_person_with_mds_data.py  populate_person_with_pub_persons.py  populate_person_with_pure_data.py  populate_pub.py  populate_pure_org_with_pub_orgs.py  populate_research_output.py  populate_umn_dept_pure_org_map.py  populate_umn_dept_pure_org_uuid.py  populate_umn_person_pure_org_map.py  pure_api_client.py  pure_api_response_parser.py  (+14 more)
alembic/: env.py
docs/: award.xsd  award_sync_view_oracle.sql  oracle_person_view_create_statements.sql  oracle_user_view_create_statements.sql  project_sync_view_oracle.sql  read_only_role_management.md
experts_dw/: alembic.ini  common.py  cx_oracle_helpers.py  db.py  dbviews.py  exceptions.py  expsql.py  grad_program.py  models.py  pure_json.py  pure_json_collection_meta.py  pure_json_collection_metadata.py  rawsql.py  scopus_json.py  scopus_json_collection_meta.py  sqlapi.py
legacy/: OrganisationDept-201703.csv  OrganisationDept-201703.txt  PureOrganisationalHierarchy.csv  PureOrganisations-improved.csv  PureOrganisations.csv  PureOrganisations.ods  Stafforganisationrelations-201701.csv  crossref-api-example.json  crossref-api-example.pp.json  data-dictionary.md  experts.mwb  load_ldss_internal_org.py  parsed_pub_examples.py  person_associations_example.py  person_org_map_notes.md  populate_assoc_tables.out.1.txt  populate_assoc_tables.py  populate_org_with_pure_data.py  populate_pub.py  populate_pure_org_names_types.py  (+11 more)
(+314 files in other folders)
