[tool.poetry]
name = "experts_dw"
version = "7.16.0"
description = "Tools for working with the Experts@Minnesota Data Warehouse."
readme = "README.md"
authors = ["David Naughton <naughton@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.3"
pugsql = "^0.2.3"
sqlalchemy = "*"
sqlalchemy_mptt = "*"
sqlparse = "*"
Jinja2 = "^2.11"
cx-oracle = "8.0.1"

[tool.poetry.dev-dependencies]
alembic = "*"
pytest = "*"
dotenv_switch = {git = "git://github.com/UMNLibraries/dotenv_switch.git"}
pureapi = {git = "git://github.com/UMNLibraries/pureapi.git", tag="4.2.0"}
