[tool.poetry]
name = "experts_dw"
version = "7.26.0"
description = "Tools for working with the Experts@Minnesota Data Warehouse."
readme = "README.md"
authors = ["David Naughton <naughton@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.3"
pugsql = "^0.2.3"
sqlalchemy = "^1.4"
sqlalchemy_mptt = "^0.2.5"
sqlparse = "^0.4.2"
Jinja2 = "^3.0.1"
cx-oracle = "^8.0.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
alembic = "^1.7.7"
pytest = "^7.0.1"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
pureapi = {url = "https://github.com/UMNLibraries/pureapi/raw/main/dist/pureapi-4.6.1.tar.gz"}

[tool.poetry.build]
generate-setup-file = true
