[tool.poetry]
name = "experts_dw"
version = "10.2.0"
description = "Tools for working with the Experts@Minnesota Data Warehouse."
readme = "README.md"
authors = ["David Naughton <naughton@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^1.4"
sqlalchemy_mptt = "^0.2.5"
sqlparse = "^0.4.2"
cx-oracle = "^8.0.1"
python-dateutil = "^2.8.2"
attrs = "^25.3.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.7.7"
pytest = "^8.4.1"
dotenv_switch = {url = "https://github.com/UMNLibraries/dotenv_switch/raw/master/dist/dotenv_switch-0.1.2.tar.gz"}
pureapi = {url = "https://github.com/UMNLibraries/pureapi/raw/main/dist/pureapi-4.6.2.tar.gz"}

[tool.poetry.build]
generate-setup-file = true
